@@ -192,7 +192,6 @@ AC_SUBST(CFLAGS)
 AC_OUTPUT([
 sources/Makefile
 parser/Makefile
-parser/GAPI/Makefile
 generator/Makefile
 generator/gapi-codegen
 glib/Makefile
