@@ -1,4 +1,0 @@
-moduledir = $(datadir)/perl5/GAPI
-module_SCRIPTS = Metadata.pm
-EXTRA_DIST = Metadata.pm
-
