@@ -1,5 +1,12 @@
 2004-05-25  Mike Kestner  <mkestner@ximian.com>
 
+	* configure.in : don't expand the GAPI Makefile.
+	* parser/Makefile.am : remove SUBDIRS.
+	* parser/gapi2xml.pl : remove GAPI::Metadata usage.
+	* parser/GAPI/* : kill. long live gapi-fixup.
+
+2004-05-25  Mike Kestner  <mkestner@ximian.com>
+
 	* gtk/Container.custom : use glue to invoke the GtkCallback in
 	Forall.
 	* gtk/glue/container.c : add gtksharp_container_invoke_gtk_callback.
